Changes for the java 8 version